# geographiclib-wrappers

./: .gitignore  CMakeLists.txt  README.md
CMakeModules/: Config.cmake.in  ConfigVersion.cmake.in  Find.cmake.in  FindCSharp.cmake  FindDotNetFrameworkSdk.cmake  FindMono.cmake  InstallAutoDiscoveryTools.cmake  InstallPDBFiles.cmake  ModuleInstall.cmake  Use.cmake.in  UseCSharp.cmake  UseMono.cmake  same_uint64t_ulong.cxx
src/: CMakeLists.txt
src/geolib-wrapper/: CMakeLists.txt  GeoLibWrapperConfig.h.in  Geodesic.cpp  Geodesic.h
src/swig/: CMakeLists.txt  common.i  exception_handler.i  operator_overload.i  postbuild.cmake  prebuild.cmake
src/swig/geolib-wrapper/: CMakeLists.txt  module.i
src/swig/std/: CMakeLists.txt  module.i  std_reference_wrapper.i
